fix: 민감정보 깃 제외

--- a/django_demo/templates/index.html
+++ b/django_demo/templates/index.html
@@ -154,7 +154,7 @@
         function deleteBook(id) {
           $.ajax({
             type: "POST",
-            url: "/delete/" + id,
+            url: "/delete/" + id +"/",
             success: function (response) {
               alert(response);
               location.reload();
