test: static 이미지 포기하고 마무리

--- a/django_demo/templates/index.html
+++ b/django_demo/templates/index.html
@@ -103,7 +103,7 @@
           </tr>
         </tbody>
       </table>
-      <img src="{% static 'plz.jpeg' %}" alt="[please]" />
+      <img src="{% static 'plz.jpg' %}" alt="[please]" />
 
       <script>
         function addBook() {
